syntax = "proto3";

option go_package = "./rowcols";

message TableMetadata {
    repeated ColumnMetadata Columns = 1;
    repeated ColumnKey Primary = 2;
}

// These need to match the values in maho/sql/datatype.go
enum DataType {
    Unknown = 0;
    Boolean = 1;
    String = 2;
    Bytes = 3;
    Float = 4;
    Integer = 5;
}

message ColumnMetadata {
    string Name = 1;
    DataType Type = 3;
    uint32 Size = 4;
    bool Fixed = 5;
    bool NotNull = 6;
    string Default = 7;
}

message ColumnKey {
    int32 Number = 1;
    bool Reverse = 2;
}
