syntax = "proto3";

option go_package = "./engine";

message TableTypeMetadata {
    int64 Version = 1;
    repeated ColumnMetadata Columns = 2;
    repeated ColumnKey Primary = 3;
    repeated IndexMetadata Indexes = 4;
    repeated ConstraintMetadata Constraints = 5;
    repeated CheckConstraint Checks = 6;
    repeated ForeignKey ForeignKeys = 7;
    repeated ForeignRef ForeignRefs = 8;
    repeated TriggerMetadata Triggers = 9;
}

// These need to match the values in maho/sql/datatype.go
enum DataType {
    Unknown = 0;
    Boolean = 1;
    String = 2;
    Bytes = 3;
    Float = 4;
    Integer = 5;
}

message ColumnMetadata {
    string Name = 1;
    DataType Type = 2;
    uint32 Size = 3;
    bool Fixed = 4;
    bool NotNull = 5;
    bytes Default = 6;
    string DefaultExpr = 7;
}

message ColumnKey {
    int32 Number = 1;
    bool Reverse = 2;
}

message IndexMetadata {
    string Name = 1;
    repeated ColumnKey Key = 2;
    repeated int32 Columns = 3;
    bool Unique = 4;
}

// These need to match the values in maho/sql/constraint.go
enum ConstraintType {
    UnknownConstraint = 0;
    Default = 1;
    NotNull = 2;
    Primary = 3;
    Unique = 4;
    Check = 5;
    Foreign = 6;
}

message ConstraintMetadata {
    string Name = 1;
    ConstraintType Type = 2;
    int32 ColNum = 3;
}

message CheckConstraint {
    string Name = 1;
    bytes Check = 2;
    string CheckExpr = 3;
}

message TableName {
    string Database = 1;
    string Schema = 2;
    string Table = 3;
}

message ForeignKey {
    string Name = 1;
    repeated int32 KeyColumns = 2;
    TableName ReferenceTable = 3;
    string ReferenceIndex = 4;
    int32 OnDelete = 5;
    int32 OnUpdate = 6;
}

message ForeignRef {
    string Name = 1;
    TableName Table = 2;
}

message TriggerMetadata {
    string Type = 1;
    int64 Events = 2;
    bytes Trigger = 3;
}

message ForeignKeyTrigger {
    string Name = 1;
    TableName Table = 2;
    repeated int32 KeyColumns = 3;
    string SqlStmt = 4;
}
